--- a/login.html
+++ b/login.html
@@ -20,30 +20,29 @@
     <p class="line"></p>
  
     <div class="login-container">
-        <button class="login-container--fb-button">
-            
+        <button class="login-container__fb-button">            
             <p><img src="https://icongr.am/entypo/facebook-with-circle.svg?size=128&color=ffffff" height="25px" alt="facebook-repeco-login">  CONTINUAR CON FACEBOOK</p>
         </button>
-        <button class="login-container--google-button">
+        <button class="login-container__google-button">
             <p><img src="https://icongr.am/simple/google.svg?size=128&color=000000&colored=false" height="25px" alt="google-repeco-login">
                  CONTINUAR CON GOOGLE</p>
         </button>
-        <div class="login-container--line">
-            <p class="login-container--line-first"></p>
-            <p class="login-container--line-letter">o</p>
-            <p class="login-container--line-second"></p>
+        <div class="login-container__line">
+            <p class="login-container__line-first"></p>
+            <p class="login-container__line-letter">o</p>
+            <p class="login-container__line-second"></p>
         </div>
         <form action="" class="form-container">
             <label for="email">Correo electrónico</label><br>
-            <input type="email"><br>
+            <input class="input" type="email"><br>
             <label for="password">Contraseña</label><br>
-            <input type="password"><br>
-            <input class="form-container--submit" type="submit" value="Iniciar Sesión"><br>
+            <input class="input" type="password"><br>
+            <input class="form-container__submit" type="submit" value="Iniciar Sesión"><br>
         </form>
-        <p class="login-container--question">
+        <p class="login-container__question input">
             ¿No tienes una cuenta?
         </p>
-        <a href="" class="login-container--create-account">Crear una cuenta</a>
+        <a href="" class="login-container__create-account">Crear una cuenta</a>
     </div>
 </body>
 </html>
